<resources>
    <string name="app_name">SoundWave</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_user_sign_up_here">Not a user? Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_buttonLabel">Sign Up!</string>
    <string name="soundwave">SoundWave</string>
    <string name="artists_for_you">Artists for YOU</string>
    <string name="get_started_by">Get started by...</string>
    <string name="create_an_account">Create an account</string>
    <string name="or">or</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>

    <string name="welcome_to_soundwave">Welcome to SoundWave!</string>
    <string name="select_your_favorite_genres">Select your favorite genres</string>
    <string name="blues">Blues</string>
    <string name="country">Country</string>
    <string name="electronic">Electronic</string>
    <string name="folk">Folk</string>
    <string name="hip_hop">Hip-Hop</string>
    <string name="chill">Chill</string>
    <string name="classical">Classical</string>
    <string name="jazz">Jazz</string>
    <string name="alt">Alt</string>
    <string name="indie">Indie</string>
    <string name="latin">Latin</string>
    <string name="metal">Metal</string>
    <string name="opera">Opera</string>
    <string name="psychedelic">Psychedelic</string>
    <string name="rap">Rap</string>
    <string name="r_and_b">R and B</string>
    <string name="soul">Soul</string>
    <string name="trap">Trap</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="my_playlist">My Playlist</string>
    <string name="browse_artists">Browse Artists</string>
    <string name="recently_added">Recently Added</string>
    <string name="delete_users">Delete Users</string>
    <string name="admin">Admin</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="artists">Artists</string>
    <string name="delete_user">Delete User</string>
    <string name="add_user">Add User</string>
    <string name="preference_file_key">PreferenceFileNameSoundWave</string>
    <string name="preference_userId_key">PreferenceUserIdKeySoundWave</string>
    <string name="view_playlist"> View Playlist </string>
    <string name="browse_by_genre">Browse By Genre</string>
    <string name="plus_icon">Plus Icon</string>
    <string name="clear_playlist">Clear Playlist</string>
    <string name="view_users">View Users</string>
    <string name="delete_artist">Delete Artist</string>
    <string name="no_artists_found">No artists found.</string>
    <string name="view_artists">View Artists</string>
    <string name="clear_recently_added">Clear Recently Added</string>
    <string name="go_back">Go Back</string>
    <string name="add_more_artists">Add More Artists</string>
</resources>