<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="390dp"
        android:id="@+id/Title"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="@string/welcome_to_soundwave"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/select_genre"
        android:layout_width="390dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/select_your_favorite_genres" />


    <RadioButton
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Alt"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:text="@string/alt"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button1"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />

    <RadioButton
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Blues"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="124dp"
        android:text="@string/blues"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button2"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />

    <RadioButton
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Chill"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="172dp"
        android:text="@string/chill"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button3"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />


    <TextView
        android:id="@+id/Country"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="272dp"
        android:text="@string/country"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button5"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />

    <RadioButton
        android:id="@+id/Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />


    <TextView
        android:id="@+id/Electronic"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="316dp"
        android:text="@string/electronic"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button6"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />

    <RadioButton
        android:id="@+id/Button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Folk"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="364dp"
        android:text="@string/folk"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button7"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Classical"
        android:layout_width="130dp"
        android:layout_height="36dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="220dp"
        android:text="@string/classical"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button4"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />

    <RadioButton
        android:id="@+id/Button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Hip_Hop"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="412dp"
        android:text="@string/hip_hop"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button8"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />

    <RadioButton
        android:id="@+id/Button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <RadioButton
        android:id="@+id/Button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />


    <RadioButton
        android:id="@+id/Button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="388dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Indie"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="464dp"
        android:text="@string/indie"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button9"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />


    <TextView
        android:id="@+id/Jazz"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="508dp"
        android:text="@string/jazz"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button10"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />

    <RadioButton
        android:id="@+id/Button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="436dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />


    <RadioButton
        android:id="@+id/Button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="484dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />


    <TextView
        android:id="@+id/Latin"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="556dp"
        android:text="@string/latin"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button11"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />


    <RadioButton
        android:id="@+id/Button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="532dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Metal"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="604dp"
        android:text="@string/metal"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button12"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />


    <RadioButton
        android:id="@+id/Button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Opera"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:text="@string/opera"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button13"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />


    <RadioButton
        android:id="@+id/Button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Psychedelic"
        android:layout_width="180dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="124dp"
        android:text="@string/psychedelic"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button14"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />


    <RadioButton
        android:id="@+id/Button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Rap"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="172dp"
        android:text="@string/rap"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button15"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />


    <RadioButton
        android:id="@+id/Button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/R_and_B"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="220dp"
        android:text="@string/r_and_b"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button16"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />


    <RadioButton
        android:id="@+id/Button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="196dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Soul"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="272dp"
        android:text="@string/soul"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button17"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />


    <RadioButton
        android:id="@+id/Button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="244dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genre" />

    <TextView
        android:id="@+id/Trap"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="316dp"
        android:text="@string/trap"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/Button18"
        app:layout_constraintTop_toTopOf="@+id/select_genre" />

    <Button
        android:id="@+id/Submit_Button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:layout_width="180dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/Submit_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/view_playlist"
        android:textSize="23sp"
        android:id="@+id/Playlist_Button"

        />


</androidx.constraintlayout.widget.ConstraintLayout>