<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Options_Page">

    <TextView
        android:id="@+id/home_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/home"
        android:textSize="35sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_playlist_button"
        android:layout_width="187dp"
        android:layout_height="66dp"
        android:layout_marginTop="92dp"
        android:text="@string/my_playlist"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_textView" />

    <Button
        android:id="@+id/browse_artists_button"
        android:layout_width="214dp"
        android:layout_height="62dp"
        android:layout_marginTop="96dp"
        android:text="@string/browse_artists"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_playlist_button" />

    <Button
        android:id="@+id/recently_added_button"
        android:layout_width="200dp"
        android:layout_height="71dp"
        android:layout_marginTop="80dp"
        android:text="@string/recently_added"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_artists_button" />

</androidx.constraintlayout.widget.ConstraintLayout>